---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × 'bad-imply' is not a valid criteria name
   ╭─[audits.toml:6:30]
 5 │ description = "great"
 6 │ implies = ["safe-to-deploy", "bad-imply"]
   ·                              ───────────
 7 │ 
   ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'bad' is not a valid criteria name
    ╭─[audits.toml:9:12]
  8 │ [[audits.serde]]
  9 │ criteria = "bad"
    ·            ─────
 10 │ version = "1.0.0"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'safe-to-jog' is not a valid criteria name
    ╭─[audits.toml:13:12]
 12 │ [[audits.serde]]
 13 │ criteria = "safe-to-jog"
    ·            ─────────────
 14 │ version = "2.0.0"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'oops' is not a valid criteria name
    ╭─[audits.toml:17:12]
 16 │ [[audits.serde]]
 17 │ criteria = "oops"
    ·            ──────
 18 │ delta = "1.0.0 -> 1.1.0"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'dang' is not a valid criteria name
    ╭─[audits.toml:21:28]
 20 │ [[audits.serde]]
 21 │ criteria = ["safe-to-run", "dang"]
    ·                            ──────
 22 │ delta = "1.0.0 -> 1.1.0"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'no-good-bad-bad' is not a valid criteria name
    ╭─[audits.toml:25:12]
 24 │ [[audits.serde]]
 25 │ criteria = "no-good-bad-bad"
    ·            ─────────────────
 26 │ violation = "^5.0.0"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]
